--- a/templates/assets/asset_read.haml
+++ b/templates/assets/asset_read.haml
@@ -3,20 +3,17 @@
 
 -block page-top
 
+-block title
+  {{ title }}
+
+-block page-title
+  {{ title }}
+
 -block content
   #pjax
     -block pjax
       .lp-frame
         .right
-          .flex.w-full.mb-4.items-end.flex-wrap.justify-end{style:"min-height:41px"}
-            .flex-grow.ml-1.self-end.items-end
-              .flex.flex-col.pr-12
-                .page-title.leading-tight
-                  -block title
-                    - trans "Download"
-                  .subtitle
-                    -block subtitle
-
           .flex.w-full.mb-4
             .flex-grow.ml-1
               -if not file_error
