--- a/templates/campaigns/campaign_list.haml
+++ b/templates/campaigns/campaign_list.haml
@@ -8,6 +8,19 @@
       display: block;
     }
 
+-block extra-script
+  {{block.super}}
+
+  :javascript
+    function handleRowClicked(event) {
+      if (event.target.tagName == "TEMBA-CHECKBOX") {
+        return;
+      }
+      var row = event.target.closest("tr");
+      var id = row.getAttribute("data-uuid");
+      goto(event, row);
+    }
+
 -block page-title
   -trans "Campaigns"
 
@@ -18,81 +31,40 @@
 -block page-top
 
 -block content
-    #pjax
-      -block pjax
 
-        .lp-frame
+  .page-title
 
-          .left
+  .flex
+    .flex-grow.self-end.items-end
+      .flex.flex-col
+        %form#search-form(method="get" action="{{request.path}}")
+          %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
+          %input.hide(type="submit")
 
-            .flex.flex-col
-              -if org_perms.flows.flow_create
-                .w-64.mr-5
-                  %temba-modax{ header:"Create Campaign", endpoint:"/campaign/create/" }
-                    .button-primary.block
-                      -trans "Create Campaign"
-              
-              .lp-nav.upper
-                -for folder in folders
-                  .lp-nav-item{'class': '{% if folder.url == request_url %}font-normal{% endif %}' }
-                    .name{onclick:"goto(event)", href:'{{folder.url}}'}
-                      {{folder.label}}
-                    .count{onclick:"goto(event)", href:'{{folder.url}}'}
-                      {{ folder.count | intcomma }}
+  .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
+    -include "includes/short_pagination.haml"
 
-          .right
+  .flex-grow.overflow-y-auto.shadow          
+    %table.list.lined.selectable.scrolled
+      %tbody
+        -for obj in object_list
+          %tr.campaign.object-row.select-row(data-object-id="{{ obj.id }}" data-uuid="{{ obj.uuid }}" onclick='handleRowClicked(event)' href="{% url 'campaigns.campaign_read' obj.uuid %}")
+            - if org_perms.campaigns.campaign_update
+              %td.campaign.checkbox.object-row-checkbox
+                %temba-checkbox{onclick:"handleRowSelection(this)"}
+            %td.w-full
+              {{obj.name}}
 
-            .flex.w-full.items-end.mb-4
-              -block action-buttons
-                -if org_perms.campaigns.campaign_update
-                  .action-buttons.list-buttons-container.h-full.mr-2.flex-grow
-                    .list-buttons.flex.items-center.-mx-2.h-full
-                      -if 'restore' in actions
-                        .button-action.object-btn-restore
-                          .-mt-1.mr-2.glyph.icon-checkmark
-                          -trans "Activate"
+            %td.whitespace-nowrap
+              .recipients.inline-block
+                -include "includes/recipients_group.haml" with group=obj.group
 
-                      -if 'archive' in actions
-                        .button-action.object-btn-archive
-                          .-mt-1.mr-2.glyph.icon-box
-                          -trans "Archive"
+            %td.whitespace-nowrap
+              {{ obj.get_events|length }} event{{ obj.get_events|length|pluralize }}
 
-              .flex-grow.ml-2.items-center
-                -block title-text
-                  .page-title.leading-tight
-                    {{title}}
-              .gear-links
-                -include "spa_page_menu.haml"
+        -empty
+          %tr.empty_list
+            %td{ colspan:'99' }
+              -trans "No matching campaigns"
 
-            %form#search-form.mb-4(method="get" action="{% url 'campaigns.campaign_list'%}")
-              %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
-            %table.list.lined.selectable
-              %tbody
-                -for obj in object_list
-                  %tr.campaign.object-row.select-row{ data-object-id: "{{ obj.id }}", onrowclick:'gotoLink("{% url "campaigns.campaign_read" obj.uuid%}")'}
-                    - if org_perms.campaigns.campaign_update
-                      %td.campaign.checkbox.object-row-checkbox
-                        %temba-checkbox{onclick:"handleRowSelection(this)"}
-                    %td.w-full
-                      {{obj.name}}
-
-                    %td.whitespace-nowrap
-                      .recipients.inline-block
-                        -include "includes/recipients_group.haml" with group=obj.group
-
-                    %td.whitespace-nowrap
-                      {{ obj.get_events|length }} event{{ obj.get_events|length|pluralize }}
-
-                - empty
-                  %tr.empty_list
-                    %td{ colspan:'99' }
-                      -trans "No matching campaigns"
-
-                - block extra-rows
-            
-            .flex.flex-col.mx-4.mt-3.mb-16
-              .flex.flex-wrap
-                .text-gray-700
-                  -include "includes/results_count.html"
-                .flex-grow
-                  -include "includes/pages.html"
+        -block extra-rows
