--- a/templates/contacts/contact_blocked.haml
+++ b/templates/contacts/contact_blocked.haml
@@ -1,6 +1,6 @@
--extends "contacts/contact_list.haml"
+-extends "contacts/contact_list_spa.haml"
 -load i18n
 
 -block subtitle
-  .text-base.mt-1
+  .text-base
     -trans "All inbound messages from these contacts are ignored. They have also been removed from all groups."
