--- a/templates/contacts/contact_stopped.haml
+++ b/templates/contacts/contact_stopped.haml
@@ -1,6 +1,6 @@
--extends "contacts/contact_list.haml"
+-extends "contacts/contact_list_spa.haml"
 -load i18n
 
 -block subtitle
-  .text-base.mt-1
+  .text-base
     -trans "These contacts have opted out and you can no longer send them messages, but inbound messages will unstop them. They have also been removed from all groups."
