--- a/templates/dashboard/home.haml
+++ b/templates/dashboard/home.haml
@@ -1,61 +1,28 @@
 -extends "smartmin/base.html"
 
 -load smartmin temba compress i18n humanize tz
-
--block page-title
-  -trans "Dashboard"
-
--block page-top
-
 -block messages
-
 -block content
-
-  %input.range{id:"begin", name:"begin", type:"hidden", value:'{{begin|date:"Y-m-d"}}'}
-  %input.range{id:"end", name:"end", type:"hidden", value:'{{end|date:"Y-m-d"}}'}
-  %input.range{id:"direction", name:"direction", type:"hidden", value:"IO"}
-
-  .row-fluid
-    .span6
-      %span.title-icon
-        .glyph.icon-pie
-      .title-text
-        %h2 Dashboard
-
-  #range-group
-    .row-fluid
-      .span12
-        #range-header
-          #range-from
-          #range-to
-
-        #message-chart
-
-    .row-fluid
-      .span12.range-details
-        .range-content{ic-include:".range", ic-get-from:"/dashboard/range_details", ic-trigger-on:"load"}
-          Loading..
+  #range-group.card.scrollable.flex-shrink-0
+    #range-header.bg-gray-700.text-gray-400.-mx-6.-mt-6.px-4.py-2.border-b(style="min-height:2.55em")
+      #dates.flex.opacity-0.transition-opacity
+        #range-from.flex-grow
+        #range-to
+    #message-chart
 
 -block extra-script
   {{block.super}}
-  <script src="{{ STATIC_URL }}highcharts/highstock.js?v=3.0"></script>
-  <script src="{{ STATIC_URL }}highcharts/modules/data.js?v=3.0"></script>
 
   :javascript
+    var redrawMarker = null;
 
     function setChartOptions(begin, end, direction) {
-      $("#begin").val(Highcharts.dateFormat('%Y-%m-%d', begin));
-      $("#end").val(Highcharts.dateFormat('%Y-%m-%d', end));
-      $("#direction").val(direction);
-      $("#range-from").text(Highcharts.dateFormat('%A, %B %e, %Y', begin))
-      $("#range-to").text(Highcharts.dateFormat('%A, %B %e, %Y', end))
+      var from = Highcharts.dateFormat('%A, %B %e, %Y', begin);
+      var to = Highcharts.dateFormat('%A, %B %e, %Y', end)
+      document.querySelector("#dates").classList.add("opacity-100");
+      document.querySelector("#range-from").innerText = from;
+      document.querySelector("#range-to").innerText = to;
     }
-
-    Highcharts.setOptions({
-	  lang: {
-	    thousandsSep: ','
-	  }
-    });
 
     function selectionChanged(chart) {
       var direction = "";
@@ -68,12 +35,9 @@
       }
 
       var axis = chart.xAxis[0];
-
       setChartOptions(axis.min, axis.max, direction);
-      Intercooler.refresh($(".range-content"))
     }
 
-    var redrawMarker = null;
     function markDirty(chart) {
       if (redrawMarker != null) {
         window.clearTimeout(redrawMarker);
@@ -81,150 +45,66 @@
       redrawMarker = window.setTimeout(selectionChanged.bind(null, chart), 200);
     }
 
-    $.getJSON('/dashboard/message_history', function (data) {
-
-      // Create the chart
-      Highcharts.stockChart('message-chart', {
-        chart: {
-          zoomType: 'x',
-          events: {
-            // mark dirty out the gate
-            load: function(e) {
-              markDirty(this);
-            },
-            redraw: function(e) {
-              markDirty(this);
-            }
-          }
-        },
-        plotOptions: {
-          series: {
-            showInLegend: true,
-            stacking: 'normal'
-          }
-        },
-        legend: {
-          enabled: true
-        },
-        rangeSelector: {
-          buttons: [
-            {type: 'week', count: 1, text: 'W'},
-            {type: 'month', count: 1, text: 'M'},
-            {type: 'year', count: 1, text: 'Y'},
-            {type: 'all', count: 1, text: 'all'}
-          ],
-          inputEnabled: false,
-          selected: 1
-        },
-        xAxis: {
-          minRange: 3600000 * 24
-        },
-        credits: {
-          enabled: false
-        },
-        navigator: {
-          series: {
-            // we want to stack the navigator, but can't due to a highcharts bug, for now we
-            // use a third non-visible series with the sum of the first two series
-            // https://github.com/highcharts/highcharts/issues/7033
-            // stacking: 'normal',
-            type: 'column'
-          }
-        },
-        series: data
+    function loadCharts() {
+      Highcharts.setOptions({
+        lang: {
+          thousandsSep: ','
+        }
       });
-    });
-
-  :javascript
-    function showExtra() {
-      $('.expand').show();
-      $('.show-more').hide();
+    
+      var store = document.querySelector("temba-store");    
+      store.getUrl('/dashboard/message_history').then(function(response){
+        var data = response.json;
+        // Create the chart
+        Highcharts.stockChart('message-chart', {
+          chart: {
+            zoomType: 'x',
+            events: {
+              // mark dirty out the gate
+              load: function(e) {
+                markDirty(this);
+              },
+              redraw: function(e) {
+                markDirty(this);
+              }
+            }
+          },
+          plotOptions: {
+            series: {
+              showInLegend: true,
+              stacking: 'normal'
+            }
+          },
+          legend: {
+            enabled: true
+          },
+          rangeSelector: {
+            buttons: [
+              {type: 'week', count: 1, text: 'W'},
+              {type: 'month', count: 1, text: 'M'},
+              {type: 'year', count: 1, text: 'Y'},
+              {type: 'all', count: 1, text: 'all'}
+            ],
+            inputEnabled: false,
+            selected: 1
+          },
+          xAxis: {
+            minRange: 3600000 * 24
+          },
+          credits: {
+            enabled: false
+          },
+          navigator: {
+            series: {
+              stacking: 'normal',
+              type: 'column'
+            }
+          },
+          series: data
+        });
+  
+      });
     }
 
+    onSpload(loadCharts);
 
--block extra-less
-  -compress css
-    {% lessblock %}
-      :plain
-
-        #range-group {
-          margin-top:30px;
-          // background: rgb(67, 67, 72);
-          background: #eee;
-          padding: 2px;
-
-          #range-header {
-
-            height: 20px;
-            padding: 10px;
-
-            #range-from {
-              float:left;
-            }
-
-            #range-to {
-              float:right;
-            }
-          }
-
-          #message-chart {
-            height: 400px;
-          }
-        }
-
-        .range-details {
-          background: #fff;
-          padding: 10px;
-        }
-
-        .took {
-          font-size:11px;
-        }
-
-        th.center, td.center {
-          text-align: center;
-        }
-
-        .posterize {
-          font-weight: 500;
-        }
-
-        #recents {
-          height: 330px;
-          padding-bottom: 30px;
-        }
-
-        #daily-visits {
-          height: 450px;
-          padding-bottom: 30px;
-        }
-
-        #active-channels {
-          height: 240px;
-          padding-bottom: 30px;
-        }
-
-        #messages {
-          height: 330px;
-          padding-bottom: 30px;
-        }
-
-        #new-rule-action-sets {
-          height: 240px;
-          padding-bottom: 30px;
-        }
-
-        #flowsteps {
-          height: 240px;
-          padding-bottom: 30px;
-        }
-
-        #contacts {
-          height: 330px;
-          padding-bottom: 30px;
-        }
-
-        .small-format {
-          width: 70px;
-        }
-    {% endlessblock %}
