--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -1,4 +1,4 @@
--extends "msgs/message_box.html"
+-extends "msgs/message_box_spa.html"
 -load smartmin sms temba compress i18n humanize
 
 -block title-icon
@@ -7,13 +7,13 @@
 
 -block action-buttons
 
--block message-list
+-block content
   .mt-4
     %table.list.lined.w-full
       %tbody
         -for object in object_list
           -with translation=object.get_translation
-            %tr.select-row.cursor-pointer{class:'{% cycle row1 row1 %}', onclick:'document.location="{% url "msgs.broadcast_scheduled_read" object.id %}"'}          
+            %tr.select-row.cursor-pointer{class:'{% cycle row1 row1 %}', onclick:'goto(event, this)', href:'{%url "msgs.broadcast_scheduled_read" object.id%}'}
 
               %td.value-contacts.field_phone
                 -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all
@@ -27,21 +27,17 @@
                   .value-attachments{ style:"margin-top: 5px" }
                     -for attachment in translation.attachments
                       {% attachment_button attachment %}
-                
+
               %td.value-next
-                -if object.schedule.next_fire
-                  .glyph.icon-clock
-                  {{object.schedule.next_fire|timeuntil}}
+                .whitespace-nowrap.pr-2.pointer-events-none
+                  -if object.schedule.next_fire
+                    .glyph.icon-clock
+                    {{object.schedule.next_fire|timeuntil}}
 
           -empty
             %tr
               %td{colspan:3}
                 -trans "No matching broadcasts"
-
-- block paginator
-  -if object_list.count
-    .paginator
-      -include "smartmin/sidebar_pagination.haml"
 
 
 -block extra-less
