--- a/templates/orgs/user_two_factor_enable.haml
+++ b/templates/orgs/user_two_factor_enable.haml
@@ -1,33 +1,29 @@
 -extends 'smartmin/form.html'
 -load smartmin i18n
 
+-block page-title
+  {{title}}
+
 -block content
-  %script(src="{{ STATIC_URL }}qrious/dist/qrious.min.js")
-  .flex.justify-center
-    .w-128
-      .mb-4.page-title
-        {{ title }}
-
+  .card.-mt-1
+    .flex.pt-6(style="max-width:30em;margin: 0 auto")
+      .pl-2.pr-6
+        -blocktrans trimmed with ga_url="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2" authy_url="https://authy.com/"
+          To enable two-factor authentication on your login, use a one-time password (OTP) application such as
+          <a target="_blank" href="{{ ga_url }}">Google Authenticator</a> or <a target="_blank" href="{{ authy_url }}">Authy</a> to scan the QR code
+          below.
+      .px-2
+        %canvas#qr
+    .flex.pt-4(style="max-width:30em;margin: 0 auto")
       {{ block.super }}
-
--block pre-form
-  .mb-6
-    -blocktrans trimmed with ga_url="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2" authy_url="https://authy.com/"
-      To enable two-factor authentication on your login, use a one-time password (OTP) application such as
-      <a target="_blank" href="{{ ga_url }}">Google Authenticator</a> or <a href="{{ authy_url }}">Authy</a> to scan the QR code
-      below.
-
-  .mb-6.text-center
-    %canvas#qr
-
+  
 -block form-buttons
-  .mt-6
+  .mt-6.text-right
     %input.button-primary(type="submit" value='{{ submit_button_name }}')
-    %a.button-light.float-right(href="{% url 'orgs.org_workspace' %}")
-      -trans "Cancel"
 
 -block extra-script
   {{ block.super }}
+
   :javascript
     (function() {
       var secretUrl = "{{ secret_url }}";
@@ -35,7 +31,7 @@
         var element = document.getElementById('qr');
         if (element) {
           element.style.display = "initial";
-          new QRious({element: element, value: secretUrl, background: "#eee", size: 150});
+          new QRious({element: element, value: secretUrl, background: "#fff", size: 150});
         }
       }
     })();
